<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:drawable/menuitem_background">

        <TextView
            android:text="@string/placeholder_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/list_item_location_textview"
            android:background="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/placeholder_high_tempurature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/list_item_min_temp_textView"
                android:textAlignment="center"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:text="@string/placeholder_low_tempurature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/list_item_max_temp_textView"
                android:textAlignment="center"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/placeholder_weather_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/list_item_weather_description_textview"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/placeholder_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/list_item_date_textview"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>